доработки по подробным виджетам
